--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=micro-servicio-lib-arq
+spring.application.name=microservicio-lib-arq
+spring.docker.compose.enabled=false
+server.port=${SERVER_PORT:8080}
